syntax = "proto3";

package bluk.games;

message EmptyRequest {};